--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Neel Bhandari's Robotics and Industrial Automation Portfolio
-remote_theme: just-the-docs/just-the-docs
+remote_theme: just-the-docs
 color_scheme: light
 
 nav:
