--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-
 title: Neel Bhandari's Robotics and Automation Portfolio
+logo: Neel Bhandari's
 remote_theme: just-the-docs/just-the-docs
 color_scheme: light
 
