--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Neel Bhandari's Robotics and Automation Portfolio
 remote_theme: just-the-docs/just-the-docs
 color_scheme: light
 
-logo: Neel Bhandari's
+logo: "Neel Bhandari's"
 
 nav:
   - title: "Home"
