--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Neel Bhandari's Robotics and Automation Portfolio
+title: Robotics and Automation Portfolio by Neel Bhandari
 remote_theme: just-the-docs/just-the-docs
 color_scheme: light
 
-logo: "Neel Bhandari's"
 
 nav:
   - title: "Home"
