--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Robotics and Automation Portfolio by Neel Bhandari
+title: R-IA Portfolio by Neel Bhandari
 remote_theme: just-the-docs/just-the-docs
 color_scheme: light
 
