--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,4 @@ author:
   avatar: "/assets/images/neel.png"  # optional
   bio: "Industrial Automation | Robotics | PLC | SCADA"
   location: "Kitchener, ON"
+# Force rebuild
